# stock_trading_bot

./: .gitignore  DEVLOG.md  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml  requirements.txt
archive/code_backup/Python/STB_storage_manager_py/: .gitignore  pyproject.toml
archive/code_backup/Python/STB_storage_manager_py/src/stb_storage_manager_py/: __init__.py
archive/code_backup/Python/STB_storage_manager_py/tests/benchmarks/: test_storage_design_patterns.py
archive/code_backup/Python/fake_crypto_feed/: pyproject.toml
archive/code_backup/Python/fake_crypto_feed/src/fake_crypto_feed/: __main__.py  sender.py
code/Python/: pyproject.toml
code/Python/STB_storage_manager/: hello.py  pyproject.toml
code/Python/STB_storage_manager/src/stb_storage_manager/: __init__.py
code/Python/config/: config.yml
code/Python/fake_crypto_feed/: README.md
code/Python/fake_crypto_feed/src/fake_crypto_feed/: __main__.py  client.py  sender.py
code/Python/src/stock_trading_bot/data_fetching/: __about__.py
code/Python/src/stock_trading_bot/storage/: __init__.py  db_utils.py  duckdb_manager.py  manager.py
code/Python/src/stock_trading_bot/streamer/: base_streamer.py  crypto_quotes_data_streamer.py  protocols.py  streamer.py
code/Python/src/stock_trading_bot/utils/: __init__.py  config_loader.py  data_validation.py  granularity_check.py  logger.py
code/Python/src/stock_trading_bot/visualization/: base_dash_app.py  data_buffer.py  live_data_dash_app.py  protocols.py  real_time_viz.py  realtime_viz_dash_app.py
code/Python/stock_trading_bot/: pyproject.toml
code/STB_storage_manager_py/: pyproject.toml
code/STB_storage_manager_py/src/stb_storage_manager_py/duckdb/: db_utils.py  duckdb_manager.py
code/STB_storage_manager_py/src/stb_storage_manager_py/protocols/: storage_manager.py
code/STB_storage_manager_py/tests/benchmarks/: .gitignore  test_duckdb_vs_sqlite.py  test_flight_simple_vs_stream.py  test_storage_design_patterns.py
code/STB_storage_manager_py/tests/benchmarks/test_arrow_flight_vs_grpc_vs_rest/: data_pb2_grpc.py  test_arrow_flight_vs_grpc_vs_rest.py
code/stock_trading_bot/: .gitignore  Cargo.toml
code/stock_trading_bot/src/: dummy_usage.rs  lib.rs  main.rs
code/stock_trading_bot/src/historical/: mod.rs
code/stock_trading_bot/src/market_data/: mod.rs
code/stock_trading_bot/src/market_data_ingestor/: mod.rs
code/stock_trading_bot/src/market_data_ingestor/models/: stockbars.rs  timeframe.rs
code/stock_trading_bot/src/models/: mod.rs  stockbars.rs  timeframe.rs
code/stock_trading_bot/src/requests/: historical.rs  mod.rs
code/stock_trading_bot/src/requests/historical/: batch_request.rs  errors.rs  mod.rs  single_request.rs
code/stock_trading_bot/src/utils/: python_init.rs
code/stock_trading_bot/tests/: concurrent_delta_test.rs  historical_data.rs  historical_data_batch.rs
config/: config.yml
src/: Cargo.toml  hook-debug.sh  release.toml
src/.cargo/: release.toml
src/Python/: README.md
src/Python/data_fetching/: __init__.py
src/asset_manifest/: Cargo.toml
src/asset_manifest/src/: lib.rs
src/asset_refresh_planner/: Cargo.toml
src/asset_refresh_planner/src/: lib.rs
src/asset_spec/: Cargo.toml
src/asset_spec/src/: lib.rs
src/asset_sync/: .gitignore  .sqlfluff  Cargo.toml  diesel.toml
src/asset_sync/migrations/2025-08-22-061605_baseline_app/: down.sql  up.sql
src/asset_sync/migrations/2025-08-24-040310_schema_v1/: down.sql  up.sql
src/asset_sync/proptest-regressions/catalog/: config.txt
src/asset_sync/src/: bucket.rs  db.rs  lib.rs  models.rs  providers.rs  roaring_bytes.rs  schema.rs  spec.rs  timeframe.rs  tz.rs
src/asset_sync/src/catalog/: cache.rs  config.rs  mod.rs  repo.rs  sync.rs
src/asset_sync/src/catalog/snapshots/: asset_sync__catalog__config__tests__normalized_catalog.snap
src/asset_sync/src/catalog/sync/: apply.rs  diff.rs  mod.rs  read.rs  want.rs
src/asset_sync/src/db/: connection.rs  migrate.rs  mod.rs
src/asset_sync/src/manifest/: mod.rs  models.rs  repo.rs  sqlite.rs
src/asset_sync/src/models/: catalog.rs  mod.rs
src/asset_sync/tests/: catalog_sync.rs  manifest_repo.rs  manifest_repo_sqlite.rs  manifest_sqlite.rs  models_selectable.rs  sqlite_migrations.rs  sqlite_wal.rs
src/asset_sync/tests/common/: mod.rs
src/configs/: data_ingestor.toml
src/data_fetching/: alpaca_go_fetch.go  alpaca_py_fetch.py  async_data_fetch.py
src/data_fetching/Python/: alpaca_py_fetch.py  async_data_fetch.py
src/market_data_ingestor/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cliff.toml
src/market_data_ingestor/scripts/: README.md  release-major.sh  release-minor.sh  release-patch.sh
src/market_data_ingestor/src/: error.rs  errors.rs  legacy_errors.rs  lib.rs  main.rs  models.rs  provider.rs  providers.rs
src/market_data_ingestor/src/cli/: commands.rs  mod.rs  params.rs
src/market_data_ingestor/src/io/: dataframe.rs  errors.rs  legacy_errors.rs  mod.rs  sink.rs
src/market_data_ingestor/src/models/: asset.rs  bar.rs  bar_series.rs  mod.rs  request_params.rs  stockbars.rs  timeframe.rs
src/market_data_ingestor/src/provider/: alpaca_rest.rs
src/market_data_ingestor/src/provider/alpaca_rest/: params.rs
src/market_data_ingestor/src/providers/: alpaca_rest.rs  errors.rs  mod.rs
src/market_data_ingestor/src/providers/alpaca_rest/: mod.rs  params.rs  provider.rs  response.rs
src/market_data_ingestor/src/requests/: mod.rs
src/market_data_ingestor/src/requests/historical/: batch_request.rs  errors.rs  legacy_errors.rs  mod.rs  single_request.rs
src/market_data_ingestor/src/utils/: mod.rs  python_init.rs
src/market_data_ingestor/tests/: cli_integration_test.rs  provider_alpaca_rest_test.rs
src/metadata_catalog/: Cargo.toml
src/metadata_catalog/src/: lib.rs
src/plan_executor/: Cargo.toml
src/plan_executor/src/: lib.rs
src/shared_utils/: Cargo.toml
src/shared_utils/src/: config.rs  env.rs
src/storage_service/: CHANGELOG.md  Cargo.toml  cliff.toml
src/storage_service/tests/: concurrent_delta_test.rs
src/system_manager/: Cargo.toml
(+69 files in other folders)
