[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-trading-bot"
dynamic = ["version"]
description = 'automatic stock trading bot'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "mag1cfrog", email = "harrywong2017@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/mag1cfrog/stock-trading-bot#readme"
Issues = "https://github.com/mag1cfrog/stock-trading-bot/issues"
Source = "https://github.com/mag1cfrog/stock-trading-bot"

[tool.hatch.version]
path = "src/stock_trading_bot/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/stock_trading_bot tests}"

[tool.coverage.run]
source_pkgs = ["stock_trading_bot", "tests"]
branch = true
parallel = true
omit = [
  "src/stock_trading_bot/__about__.py",
]

[tool.coverage.paths]
stock_trading_bot = ["src/stock_trading_bot", "*/stock-trading-bot/src/stock_trading_bot"]
tests = ["tests", "*/stock-trading-bot/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
