[workspace]
resolver = "3"
members = [ "asset_refresh_planner", "asset_spec","market_data_ingestor", "metadata_catalog", "shared_utils", "storage_service"]

[profile.release]
lto = true
strip = "symbols"
opt-level = 3

[patch.crates-io]
# strum = { git = "https://github.com/Peternator7/strum.git", tag = "v0.26.3" }

[workspace.dependencies]
thiserror = "2.0.12"
