[project]
name = "stock_trading_bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mag1cfrog", email = "harrywong2017@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
