[project]
name = "stock_trading_bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mag1cfrog", email = "harrywong2017@gmail.com"},
]
dependencies = [
    "duckdb>=1.1.0",
    "pyarrow>=17.0.0",
    "pyyaml>=6.0.2",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "alpaca-py>=0.30.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
