[project]
name = "stb-storage-manager-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mag1cfrog", email = "harrywong2017@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pandas>=2.2.3",
]
