[package]
name = "stock_trading_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
polars = { version = "0.46.0", features = ["ipc"] }
pyo3 = { version = "0.23.4", features = ["auto-initialize", "chrono"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
