[package]
name = "asset_sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { workspace = true }
chrono-tz = { workspace = true }
clap = { version = "4.5.46", features = ["derive"] }
diesel = { version = "2.2.12", features = ["sqlite", "postgres", "chrono"] }
diesel-async = { version = "0.6.1", features = ["postgres", "sqlite", "deadpool", "tokio"] }
diesel_migrations = "2.2.0"
indexmap = { workspace = true }
market_data_ingestor = { workspace = true }
roaring = "0.11.2"
serde = { workspace = true }
thiserror = { workspace = true }
toml = "0.9.5"

[dev-dependencies]
insta = { version = "1.43.1", features = ["json"] }
proptest = "1.7.0"
serde_json = "1.0.143"
tempfile = "3.21.0"
