[package]
name = "asset_sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
arc-swap = "1.7.1"
chrono = { workspace = true }
chrono-tz = { workspace = true }
clap = { version = "4.5.46", features = ["derive"] }
diesel = { version = "2.2.12", features = ["sqlite", "postgres", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.6.1", features = ["postgres", "sqlite", "deadpool", "tokio"] }
diesel_migrations = "2.2.0"
indexmap = { workspace = true }
market_data_ingestor = { workspace = true }
once_cell = "1.21.3"
roaring = "0.11.2"
serde = { workspace = true }
thiserror = { workspace = true }
toml = "0.9.5"
tracing = "0.1.41"

[dev-dependencies]
insta = { version = "1.43.1", features = ["json"] }
proptest = "1.7.0"
serde_json = "1.0.143"
tempfile = "3.21.0"

[[bin]]
name = "asset-sync"
path = "src/bin/asset_sync.rs"
