[package]
name = "market_data_ingestor"
version = "1.3.5"
edition = "2024"

[features]
default = []

[dependencies]
async-trait = "0.1.88"
chrono = { workspace = true }
governor = "0.10.0"
indexmap = { workspace = true }
nonzero_ext = "0.3.0"
reqwest = { version = "0.12.22", features = ["json"] }
secrecy = "0.10.3"
serde = { workspace = true }
serde_json = "1.0.139" 
shared_utils = { path = "../shared_utils" }
thiserror = { workspace = true }
tokio = { version = "1.43.0", features = ["full"]}
toml = "0.8.20"

[dev-dependencies]
dotenvy = "0.15.7"
serial_test = "3.2.0"
tempfile = "3.17.1"

[package.metadata.release]

