[package]
name = "storage_service"
version = "0.1.1-alpha.1"
edition = "2024"

[dependencies]
arrow = "54.1.0"
deltalake = { version = "0.24.0", features = ["datafusion"] }
futures = "0.3.31"
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.16.0"

[package.metadata.release]
pre-release-hook = ["git", "cliff", "-c", "storage_service/cliff.toml", "--include-path", "src/storage_service/**", "-p", "CHANGELOG.md", "--latest"]
