[package]
name = "storage_service"
version = "0.1.2"
edition = "2024"

[dependencies]
arrow = "56.0.0"
deltalake = { version = "0.24.0", features = ["datafusion"] }
futures = "0.3.31"
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.16.0"

[package.metadata.release]
pre-release-hook = ["git", "cliff", "--include-path", "src/storage_service/**", "-p", "CHANGELOG.md", "--latest"]
