[project]
name = "stb-storage-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mag1cfrog", email = "harrywong2017@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
