[project]
name = "stb-storage-manager-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mag1cfrog", email = "harrywong2017@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fastapi>=0.115.6",
    "grpcio-tools>=1.68.1",
    "grpcio>=1.68.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.17.1",
    "pyarrow>=18.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
    "viztracer>=1.0.0",
    "docker>=7.1.0",
]
